--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="google-signin-client_id" content="672482092252-6oqngagcgckd5285hvnhmk5sclbmb59m.apps.googleusercontent.com">
     <title>Superbowl Squares</title>
     <script src="https://www.gstatic.com/firebasejs/3.6.5/firebase.js"></script>
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
