--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="google-signin-client_id" content="672482092252-6oqngagcgckd5285hvnhmk5sclbmb59m.apps.googleusercontent.com">
     <title>Superbowl Squares</title>
     <script src="https://www.gstatic.com/firebasejs/3.6.5/firebase.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -25,7 +26,7 @@
     <nav>
         <div class="nav-wrapper">
             <a href="#!" class="brand-logo">SB SQUARES</a>
-            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons large">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="sass.html">Sass</a></li>
                 <li><a href="badges.html">Components</a></li>
