--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="google-signin-client_id" content="672482092252-6oqngagcgckd5285hvnhmk5sclbmb59m.apps.googleusercontent.com">
     <title>Superbowl Squares</title>
     <script src="https://www.gstatic.com/firebasejs/3.6.5/firebase.js"></script>
-    
+
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,7 +17,7 @@
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="javascript/sbjava.js"></script>
 
 </head>
