--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="javascript/sbjava.js"></script>
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -45,8 +46,13 @@
     <div class="container">
         <div class="row">
             <div class="col s1">
-                <div class="g-signin2" data-onsuccess="onSignIn">Sign In</div>
+                <!-- <div class="g-signin2" data-onsuccess="onSignIn">Sign In</div> -->
             </div>
+        </div>
+    </div>
+    <div class="container" id="playContainer">
+        <div class="playArea">
+
         </div>
     </div>
 
