--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="container">
         <div class="row">
             <div class="col s1">
-                <!-- <div class="g-signin2" data-onsuccess="onSignIn">Sign In</div> -->
+                <div class="g-signin2" data-onsuccess="onSignIn">Sign In</div>
             </div>
         </div>
     </div>
